Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/DeclVsUseErrorMessage.out
DeclVsUseErrorMessage.java:17:5: compiler.err.annotation.type.not.applicable
DeclVsUseErrorMessage.java:21:23: compiler.err.annotation.type.not.applicable.to.type: DeclVsUseErrorMessage.A
2 errors
